--- a/src/assets/styles/scss/components/Alert.scss
+++ b/src/assets/styles/scss/components/Alert.scss
@@ -12,7 +12,7 @@
 }
 
 .swal2-confirm {
-  background-color: $blue-color !important;
+  background-color: $primary-color !important;
   font-family: $primary-font !important;
   color: #fff !important;
   border-radius: 8px !important;
