--- a/src/components/button/AddButton.scss
+++ b/src/components/button/AddButton.scss
@@ -20,7 +20,7 @@
 }
 
 .add-btn-label {
-    background-color: $blue-color;
+    background-color: $primary-color;
     color: #fff;
     border: none;
     border-radius: 50%;
