--- a/src/modules/auth/login/Login.scss
+++ b/src/modules/auth/login/Login.scss
@@ -33,12 +33,12 @@
   // TÍTULO
   h2 {
     font-weight: 700;
-    color: $blue-color;
+    color: $primary-color;
   }
 
   // LINKS
   .login-link {
-    color: $blue-color;
+    color: $primary-color;
     font-weight: 500;
     font-size: 0.95rem;
     margin-top: 1rem;
