--- a/src/modules/core/index/Index.scss
+++ b/src/modules/core/index/Index.scss
@@ -78,7 +78,7 @@
     }
 
     .price {
-      color: $orange-color;
+      color: $secondary-color;
       font-weight: bold;
       font-size: 1.1rem;
       margin-top: 0.5rem;
