--- a/src/modules/user/User.scss
+++ b/src/modules/user/User.scss
@@ -154,7 +154,7 @@
   .user-edit-btn-icon { 
     margin-left:10px; 
 
-    &:hover { color: darken($orange-color, 10%) !important; }
+    &:hover { color: darken($secondary-color, 10%) !important; }
   }
 
 }
