--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -3,8 +3,8 @@
 @import '../../assets/styles/scss/mixins/screen';
 
 .header {
-  background: linear-gradient(90deg, lighten($blue-color, 8%), $blue-color);
-  border-bottom: 6px solid darken($blue-color, 15%);
+  background: linear-gradient(90deg, lighten($primary-color, 8%), $primary-color);
+  border-bottom: 6px solid darken($primary-color, 15%);
   color: white;
   display: flex;
   justify-content: center;
@@ -35,7 +35,7 @@
 
     &:hover {
       transform: rotate(-5deg) scale(1.05);
-      color: lighten($blue-color, 20%);
+      color: lighten($primary-color, 20%);
     }
   }
 
