--- a/src/components/pagination/Pagination.scss
+++ b/src/components/pagination/Pagination.scss
@@ -14,7 +14,7 @@
 }
 
 .pagination__btn {
-  background: $blue-color;
+  background: $primary-color;
   border: none;
   color: #fff;
   padding: 0.55rem 1.15rem;
@@ -28,7 +28,7 @@
 }
 
 .pagination__btn:hover:not(:disabled) {
-  background: darken($blue-color, 7%);
+  background: darken($primary-color, 7%);
   transform: translateY(-2px);
 }
 
@@ -46,7 +46,7 @@
 .pagination__last {
   background: transparent;
   border: none;
-  color: $blue-color;
+  color: $primary-color;
   font-weight: 600;
   font-size: 0.9rem;
   cursor: pointer;
