--- a/src/modules/core/home/Home.scss
+++ b/src/modules/core/home/Home.scss
@@ -36,7 +36,7 @@
   margin-bottom: 1.5rem;
 
   .home-add-btn {
-    background-color: $blue-color;
+    background-color: $primary-color;
     color: #fff;
     border: none;
     border-radius: 50%;
@@ -50,7 +50,7 @@
     @include screen-sm { font-size: 1.125rem !important; }
 
     &:hover {
-      background-color: darken($blue-color, 8%);
+      background-color: darken($primary-color, 8%);
       transform: translateY(-5px);
       box-shadow: 0 6px 14px rgba(37, 99, 235, 0.3);
     }
@@ -86,7 +86,7 @@
   padding: 0.35rem 0.7rem;
   border-radius: 9999px;
   background-color: #e9e9e9;
-  color: $orange-color;
+  color: $secondary-color;
   box-shadow: 0 2px 8px rgba(37, 99, 235, 0.12);
   font-style: normal;
   font-size: 0.9rem;
@@ -235,7 +235,7 @@
   width: 60px;
   height: 60px;
   border: 5px solid #dbeafe;
-  border-top-color: $blue-color;
+  border-top-color: $primary-color;
   border-radius: 50%;
   animation: spin 0.9s linear infinite;
 }
