--- a/src/modules/property/Property.scss
+++ b/src/modules/property/Property.scss
@@ -63,7 +63,7 @@
   .property-price {
     font-size: 1.6rem;
     font-weight: 700;
-    color: $orange-color;
+    color: $secondary-color;
     margin-bottom: 1.5rem;
   }
 
@@ -72,7 +72,7 @@
     border-radius: 12px;
     padding: 1rem 1.5rem;
     margin-bottom: 1.5rem;
-    border-left: 4px solid $blue-color;
+    border-left: 4px solid $primary-color;
 
     p {
       margin: 0.4rem 0;
@@ -96,7 +96,7 @@
       height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      border: 3px solid $orange-color;
+      border: 3px solid $secondary-color;
       margin-bottom: 0.8rem;
     }
 
@@ -117,7 +117,7 @@
     @include screen-sm { padding: 1.5rem 0.5rem; }
 
     h3 {
-      color: $blue-color;
+      color: $primary-color;
       font-size: 1.2rem;
       margin-bottom: 1rem;
     }
@@ -128,7 +128,7 @@
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
       padding: 1rem 1.2rem;
       margin-bottom: 1rem;
-      border-left: 4px solid $blue-color;
+      border-left: 4px solid $primary-color;
 
       p {
         margin: 0.3rem 0;
@@ -140,7 +140,7 @@
 
   .property-button {
     width: 100%;
-    background-color: $blue-color;
+    background-color: $primary-color;
     color: white;
     border: none;
     border-radius: 12px;
@@ -178,7 +178,7 @@
 
   .spinner {
     border: 4px solid #e0e0e0;
-    border-top: 4px solid $blue-color;
+    border-top: 4px solid $primary-color;
     border-radius: 50%;
     width: 50px;
     height: 50px;
