--- a/src/modules/property/service/AddProperty.scss
+++ b/src/modules/property/service/AddProperty.scss
@@ -35,10 +35,10 @@
   margin-bottom: 2.5rem;
 
   h2 {
-    color: $blue-color;
+    color: $primary-color;
     font-size: 1.4rem;
     margin-bottom: 1.2rem;
-    border-left: 4px solid $blue-color;
+    border-left: 4px solid $primary-color;
     padding-left: 0.5rem;
   }
 }
@@ -116,7 +116,7 @@
   margin-top: 1rem;
 
   &.primary {
-    background-color: $blue-color;
+    background-color: $primary-color;
     color: #fff;
 
     &:hover {
