--- a/src/modules/property/service/EditProperty.scss
+++ b/src/modules/property/service/EditProperty.scss
@@ -32,7 +32,7 @@
 
 .editproperty-title {
   text-align: center;
-  color: $blue-color;
+  color: $primary-color;
   font-size: 2.2rem;
   margin-bottom: 2.5rem;
 }
@@ -42,10 +42,10 @@
   margin-bottom: 2.5rem;
 
   h2 {
-    color: $blue-color;
+    color: $primary-color;
     font-size: 1.4rem;
     margin-bottom: 1.2rem;
-    border-left: 4px solid $blue-color;
+    border-left: 4px solid $primary-color;
     padding-left: 0.5rem;
   }
 }
@@ -210,7 +210,7 @@
   margin-top: 1rem;
 
   &.primary {
-    background-color: $blue-color;
+    background-color: $primary-color;
     color: #fff;
 
     &:hover {
