SEO lighthouse accessibility

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import './assets/styles/scss/mixins/colors';
 @import './assets/styles/scss/mixins/fonts';
+@import './assets/styles/scss/mixins/screen';
 
 // Swal2 Alert styles
 @import './assets/styles/scss/components/Alert.scss';
