--- a/src/modules/password/reset/PasswordReset.scss
+++ b/src/modules/password/reset/PasswordReset.scss
@@ -9,10 +9,10 @@
   align-items: center;
   min-height: 100vh;
   background: #f6f8fb;
-  padding: 2rem;
+  padding: 2rem 2rem;
   transition: all 0.3s ease;
 
-  @include screen-sm { padding: 1rem; }
+  @include screen-sm { padding: 1rem 0.5rem  !important; }
 }
 
 // Tarjeta
@@ -29,7 +29,7 @@
   transition: all 0.3s ease;
   padding: 2.5rem 2rem;
 
-  @include screen-sm { padding: 1.5rem 0.5rem; }
+  @include screen-sm { padding: 1.5rem 1.15rem !important; }
 
   h2 {
     font-weight: 700;
