--- a/src/components/menu/AppMenu.scss
+++ b/src/components/menu/AppMenu.scss
@@ -58,17 +58,13 @@
   }
 }
 
-.bm-cross {
-  background: $primary-color;
-}
+.bm-cross { background: $primary-color; }
 
-/* ====== Menú ====== */
+/* Contenedor Menú */
 .bm-menu-wrap {
   width: 40vw !important;
 
-  @include screen-md { 
-    width: 60vw !important;
-  }
+  @include screen-md {  width: 65vw !important; }
 }
 
 /* Fondo del menú */
@@ -144,6 +140,10 @@
   font-family: 'Poppins', sans-serif;
   font-weight: 500;
   font-size: 1.25rem;
+  text-wrap: nowrap;
+  white-space: nowrap;      /* Prevents text from wrapping to the next line */
+  overflow: hidden;         /* Hides any content that overflows the element's box */
+  text-overflow: ellipsis;  /* Displays an ellipsis (...) to indicate truncated text */
   border: none;
   border-radius: 8px;
   width: 99%;
@@ -188,21 +188,13 @@
     font-size: 0.85rem;
   }
 
-  .menu-header h2 {
-    font-size: 0.95rem;
-  }
+  .menu-header h2 { font-size: 0.95rem; }
 
-  .bm-burger-button {
-    top: 17.5px;
-  }
+  .bm-burger-button { top: 17.5px; }
 }
 
 @include mobilePortrait {
-  .bm-menu-wrap {
-    width: 80vw !important;
-  }
+  .bm-menu-wrap { width: 81.5vw !important; }
 
-  .bm-menu {
-    padding: 1rem;
-  }
+  .bm-menu { padding: 1rem; }
 }
