--- a/src/modules/auth/register/Register.scss
+++ b/src/modules/auth/register/Register.scss
@@ -18,7 +18,6 @@
 .register-card {
   background-color: #fff;
   border-radius: 20px;
-  padding: 2.5rem 2rem;
   width: 100%;
   max-width: 420px;
   box-shadow: 0 8px 25px rgba(0, 0, 0, 0.1);
@@ -27,6 +26,9 @@
   color: #333;
   font-family: $primary-font;
   transition: all 0.3s ease;
+  padding: 2.5rem 2rem;
+
+  @include screen-sm { padding: 1.5rem 0.5rem !important; }
 
   h2 {
     font-weight: 700;
