--- a/src/modules/core/home/Home.scss
+++ b/src/modules/core/home/Home.scss
@@ -215,7 +215,7 @@
   }
 }
 
-// LOADER GLOBAL (blindado)
+// LOADER GLOBAL
 .loader-overlay,
 .loader-overlay.loader-overlay--home {
   position: fixed;
